[project]
name = "Household-Account"
version = "0.3.1"
description = "Save Money in Times of High Inflation"
authors = [
    {name = "heejin131", email = "journeyjean131@gmail.com"},
]
dependencies = ["typer>=0.15.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
household-account = "household_account.where_now:entry_point"

[dependency-groups]
eda = [
    "jupyterlab>=4.3.5",
]
